<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.courageous.marketgallery.BrowseProductsCustomer"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/default_user"
        android:id="@+id/user_image_view"
        android:onClick="userImageView"/>
    <TextView android:text="@string/user_customer_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/user_image_view"
        android:layout_marginTop="17dp"
        android:paddingStart="5dp"
        android:id="@+id/user_customer_imageview"
        android:textSize="15sp"
        android:textColor="@color/yellow"/>
    <TextView android:text="@string/obtain_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/user_customer_imageview"
        android:layout_marginTop="17dp"
        android:paddingStart="5dp"
        android:id="@+id/obtain_username"
        android:textSize="15sp"
        android:textColor="#FFFFFF"/>

    <TextView android:text="@string/gallery_customer_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_image_view"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/app_description"
        android:textSize="20sp"
        android:textColor="@color/yellow" />

    <com.example.courageous.marketgallery.CanvasView
        android:id="@+id/canvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_description" />

    <TextView android:text="@string/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_description"
        android:layout_marginTop="30dp"
        android:id="@+id/product_name"
        android:textSize="20sp"
        android:textColor="@color/yellow"/>
    <TextView android:text="@string/product_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_description"
        android:layout_toEndOf="@id/product_name"
        android:layout_marginTop="30dp"
        android:paddingStart="5dp"
        android:id="@+id/product_name_field"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <TextView android:text="@string/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:layout_marginTop="15dp"
        android:id="@+id/product_description"
        android:textSize="20sp"
        android:textColor="@color/yellow" />
    <TextView android:text="@string/product_description_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:id="@+id/product_description_field"
        android:textSize="20sp"
        android:textColor="#FFFFFF" />

    <TextView android:text="@string/price_cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description_field"
        android:layout_marginTop="15dp"
        android:id="@+id/price_cad"
        android:textSize="20sp"
        android:textColor="@color/yellow" />
    <TextView android:text="@string/price_cad_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description_field"
        android:layout_toEndOf="@id/price_cad"
        android:layout_marginTop="16dp"
        android:paddingStart="5dp"
        android:id="@+id/price_cad_field"
        android:textSize="20sp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/button_previous"
        android:id="@+id/button_previous"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:onClick="previousButton"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_selector" />
    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/button_next"
        android:id="@+id/button_next"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:onClick="nextButton"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_selector" />

    <TextView android:text="@string/price_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_cad_field"
        android:layout_above="@id/button_previous"
        android:layout_marginTop="15dp"
        android:id="@+id/price_usd"
        android:textSize="20sp"
        android:textColor="@color/yellow"/>
    <TextView android:text="@string/price_usd_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_cad_field"
        android:layout_above="@id/button_previous"
        android:layout_toEndOf="@id/price_usd"
        android:layout_marginTop="16dp"
        android:paddingStart="5dp"
        android:id="@+id/price_usd_field"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>
    <TextView android:text="@string/different_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_cad_field"
        android:layout_above="@id/button_previous"
        android:layout_toEndOf="@id/price_usd_field"
        android:layout_marginTop="19dp"
        android:paddingStart="5dp"
        android:id="@+id/different_price"
        android:textSize="15sp"
        android:textColor="@color/linked_yellow"
        android:onClick="differentPrice"/>

</RelativeLayout>