<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.courageous.marketgallery.AddProduct"
    android:background="@drawable/background">

    <TextView android:text="@string/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingEnd="5dp"
        android:id="@+id/product_name"
        android:textSize="20sp"
        android:textColor="@color/yellow"/>
    <EditText android:text="@string/product_name_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/product_name"
        android:layout_marginTop="15dp"
        android:background="@color/yellow"
        android:id="@+id/product_name_edit_text"
        android:textSize="20sp"
        android:inputType="textCapSentences" />

    <TextView android:text="@string/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name_edit_text"
        android:layout_marginTop="15dp"
        android:id="@+id/product_description"
        android:textSize="20sp"
        android:textColor="@color/yellow"/>
    <EditText android:text="@string/product_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/product_description"
        android:background="@color/yellow"
        android:id="@+id/product_description_edit_text"
        android:textSize="20sp"
        android:inputType="textCapSentences" />

    <TextView android:text="@string/price_cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description_edit_text"
        android:layout_marginTop="15dp"
        android:paddingEnd="5dp"
        android:id="@+id/price_cad"
        android:textSize="20sp"
        android:textColor="@color/yellow"/>
    <EditText android:text="@string/price_cad_edit_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description_edit_text"
        android:layout_toEndOf="@id/price_cad"
        android:layout_marginTop="15dp"
        android:background="@color/yellow"
        android:id="@+id/price_cad_edit_text"
        android:textSize="20sp"
        android:inputType="numberDecimal" />

    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/button_cancel"
        android:id="@+id/button_cancel"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_selector"
        android:onClick="cancelButton" />
    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/button_save"
        android:id="@+id/button_save"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_selector"
        android:onClick="saveButton" />
</RelativeLayout>
