<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:text="@string/username"
        android:id="@+id/username" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:background="@color/yellow"
        android:textSize="30sp"
        android:typeface="monospace"
        android:hint="@string/username_hint"
        android:textColorHint="@drawable/text_hint_selector"
        android:id="@+id/username_edit_text"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_edit_text"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:text="@string/password"
        android:id="@+id/password" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:background="@color/yellow"
        android:textSize="30sp"
        android:hint="@string/password_hint"
        android:textColorHint="@drawable/text_hint_selector"
        android:id="@+id/password_edit_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_edit_text"
        android:background="@drawable/button_selector"
        android:onClick="loginButton" />
    <Button
        android:id="@+id/register_button"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_button"
        android:background="@drawable/button_selector"
        android:onClick="registerButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devs_only"
        android:id="@+id/devs_only"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="@color/linked_yellow"
        android:onClick="devsOnly"
        android:clickable="true" />

</RelativeLayout>
