<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.courageous.marketgallery.SwitchCurrency"
    android:background="@drawable/background" >

    <TextView android:text="@string/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convert"
        android:textSize="20sp"
        android:textColor="@color/yellow" />
    <TextView android:text="@string/cad_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/convert"
        android:paddingStart="5dp"
        android:id="@+id/cad_textview"
        android:textSize="20sp"
        android:textColor="#FFFFFF" />
    <TextView android:text="@string/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/cad_textview"
        android:paddingStart="5dp"
        android:id="@+id/to"
        android:textSize="20sp"
        android:textColor="@color/yellow" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/convert"
        android:layout_marginTop="10dp"
        android:id="@+id/currency_spinner"
        android:background="@color/yellow" />

    <TextView android:text="@string/converted_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currency_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/converted_price"
        android:textSize="20sp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/cancel_currency_button"
        android:text="@string/button_cancel"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:onClick="cancelCurrencyButton" />
    <Button
        android:id="@+id/switch_currency_button"
        android:text="@string/switch_currency_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/cancel_currency_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector" />

</RelativeLayout>
