<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.courageous.marketgallery.RegisterCustomer"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:text="@string/register_name"
        android:id="@+id/register_name" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name"
        android:background="@color/yellow"
        android:textSize="30sp"
        android:id="@+id/register_name_edit_text"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name_edit_text"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:text="@string/username"
        android:id="@+id/register_username" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username"
        android:background="@color/yellow"
        android:textSize="30sp"
        android:id="@+id/register_username_edit_text"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username_edit_text"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:text="@string/password"
        android:id="@+id/register_password" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:background="@color/yellow"
        android:textSize="30sp"
        android:id="@+id/register_password_edit_text"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_edit_text"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:text="@string/register_confirm_password"
        android:id="@+id/register_confirm_password" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_confirm_password"
        android:background="@color/yellow"
        android:textSize="30sp"
        android:id="@+id/register_confirm_password_edit_text"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_confirm_password_edit_text"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:text="@string/register_email"
        android:id="@+id/register_email" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email"
        android:background="@color/yellow"
        android:textSize="30sp"
        android:id="@+id/register_email_edit_text"
        android:inputType="textEmailAddress" />

    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/button_cancel"
        android:id="@+id/button_cancel"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_selector"
        android:onClick="cancelButton" />
    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/button_register"
        android:id="@+id/button_register"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_selector"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:onClick="registerButton" />

</RelativeLayout>
